[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/TemplateHexagonEngine.gd" type="Script" id=1]
[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/MenuPart/Spaces/3Dspace.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/MenuPart/Spaces/2Dspace.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/MenuPart/Spaces/UIspace.tscn" type="PackedScene" id=4]

[node name="TemplateHexagonEngine" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="3Dspace" parent="." instance=ExtResource( 2 )]

[node name="2Dspace" parent="." instance=ExtResource( 3 )]

[node name="MustFollowPersonCamera2D" type="CanvasLayer" parent="."]

[node name="UIspace" parent="MustFollowPersonCamera2D" instance=ExtResource( 4 )]
MainMenuNode = NodePath("../CanvasLayer/UIspace/MainMenu")
NextMenuNode = NodePath("../CanvasLayer/UIspace/NextMenu")
[connection signal="ChangeDVD_Exec" from="MustFollowPersonCamera2D/UIspace" to="." method="_on_UIspace_ChangeDVD_Exec"]
[connection signal="Shutdown_Exec" from="MustFollowPersonCamera2D/UIspace" to="." method="_on_UIspace_Shutdown_Exec"]
